<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".ui.fragments.VerifyPhoneNumber">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutHead"
            android:background="#5CC09F"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/image_view"
                android:background="@drawable/ic_boy"
                android:layout_centerInParent="true"
                android:layout_width="90dp"
                android:layout_height="90dp"/>

            <TextView
                android:id="@+id/edit_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:enabled="true"
                android:text="@string/verify_phone_number"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progressbar_pic"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


        <LinearLayout
            android:animateLayoutChanges="true"
            android:id="@+id/layoutPhone"
            android:padding="16dp"
            android:visibility="invisible"
            android:layout_below="@id/layoutHead"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_sent"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_countryAutoDetectionPref="LOCALE_SIM"
                    app:ccp_countryPreference="ro"
                    app:ccp_autoDetectCountry="true"
                    />

                <EditText
                    android:id="@+id/edit_text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/button_send_verification"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/send_code"
                android:textAllCaps="false" />

        </LinearLayout>


        <LinearLayout
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="visible"
            android:id="@+id/layoutVerification"
            android:padding="16dp"
            android:layout_below="@id/layoutHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/wait_for_code"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <ProgressBar
                android:layout_gravity="center_horizontal"
                android:id="@+id/progressbar"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit_text_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verif_code"
                android:inputType="number"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <Button
                android:id="@+id/button_verify"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/verify"
                android:textAllCaps="false" />

        </LinearLayout>


    </RelativeLayout>


</FrameLayout>