<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutHead"
            android:background="#5CC09F"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/image_view"
                android:background="@drawable/ic_boy"
                android:layout_centerInParent="true"
                android:layout_width="90dp"
                android:layout_height="90dp"/>

            <EditText
                android:hint="@string/name_hint"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/image_view"
                tools:text="@string/profile_name"
                android:enabled="true"
                android:autofillHints="@string/name_hint"
                android:id="@+id/edit_text_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progressbar_pic"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:padding="16dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_below="@id/layoutHead"
            android:layout_width="360dp"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_gravity="top"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                tools:text="@string/email_exemple"
                android:id="@+id/profile_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_not_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="9dp"
                android:text="@string/not_verified_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />


            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_gravity="top"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_phone"
                android:drawableStart="@drawable/ic_phone"
                tools:text="+917549161079"
                android:enabled="true"
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:enabled="true"
                android:text="@string/change_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


            <ProgressBar
                android:id="@+id/progressbar"
                android:visibility="invisible"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/button_save"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="?colorPrimary"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>